--- a/Assignment0.ipynb
+++ b/Assignment0.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/NYUExperimentalPhysics1-2021/Assignment0/blob/main/Assignment0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/NYUExperimentalPhysics1-2021/assignment0-gretagoldberg/blob/feedback/Assignment0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -87,25 +87,25 @@
       "source": [
         "### BEGIN YOUR CODE\n",
         "#I have read through the Introduction and Overview notebook\n",
-        "READ_INTRODUCTION = False\n",
+        "READ_INTRODUCTION = TRUE\n",
         "\n",
         "#I understand (at a high level) what Jupyter notebooks are and how to read and\n",
         "#interact with them (or I have been in touch with the course instructor to ask for help)\n",
-        "LEARNED_ABOUT_JUPYTER = False\n",
+        "LEARNED_ABOUT_JUPYTER = TRUE\n",
         "\n",
         "#I've created (or already have) a Google account and can access Google\n",
         "#Colaboratory under my own account\n",
-        "ACCESS_COLABORATORY = False\n",
+        "ACCESS_COLABORATORY = TRUE\n",
         "\n",
         "#I read the first chapter of the Pine lab manual online\n",
-        "READ_PINE_MANUAL = False\n",
+        "READ_PINE_MANUAL = TRUE\n",
         "\n",
         "#I've created a GitHub account\n",
-        "CREATED_GITHUB_ACCOUNT = False\n",
-        "github_username = 'username'\n",
+        "CREATED_GITHUB_ACCOUNT = TRUE\n",
+        "github_username = gretagoldberg\n",
         "\n",
         "#My info\n",
-        "my_name = 'Name'\n",
+        "my_name = Greta Goldberg\n",
         "### END YOUR CODE"
       ],
       "execution_count": null,
@@ -133,15 +133,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hi3PYzelZ9hX"
+        "id": "hi3PYzelZ9hX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce96f715-e121-4ca4-d2fb-a4da998584f4"
       },
       "source": [
         "### BEGIN YOUR CODE\n",
-        "print(...)\n",
+        "print(\"Hello Greta\")\n",
         "### END YOUR CODE"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Greta\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,10 +173,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "76d6573c-d0aa-4ceb-e73a-11d250f78acb"
+        "outputId": "db33be8e-a129-4109-b066-1f88084c1e0b"
       },
       "source": [
-        "air_speed = 11 #meters per second; add to this line to calculate mph instead\n",
+        "air_speed = 24.606 #miles per hour;\n",
         "\n",
         "#there are a few ways to print out a number in Python - let's see some of them\n",
         "print(\"The air speed of an unladen European swallow is {} mph\".format(air_speed)) #format puts the arguments in place of the {}\n",
@@ -172,21 +184,22 @@
         "print(f'The air speed of an unladed European swallow is {air_speed} mph') #here's another way to do formatting\n",
         "#you can use :.xf to specify x digits after the decimal place\n",
         "print(f'The air speed of an unladed European swallow is {air_speed:.0f} mph')\n",
-        "print(f'The air speed of an unladed European swallow is {air_speed:.1f} mph')\n"
+        "print(f'The air speed of an unladed European swallow is {air_speed:.1f} mph')\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The air speed of an unladen European swallow is 11 mph\n",
-            "The air speed of an unladen European swallow is 11 mph\n",
-            "The air speed of an unladen European swallow is 11 mph\n",
-            "The air speed of an unladed European swallow is 11 mph\n",
-            "The air speed of an unladed European swallow is 11 mph\n",
-            "The air speed of an unladed European swallow is 11.0 mph\n"
-          ],
-          "name": "stdout"
+            "The air speed of an unladen European swallow is 24.606 mph\n",
+            "The air speed of an unladen European swallow is 24.606 mph\n",
+            "The air speed of an unladed European swallow is 24.606 mph\n",
+            "The air speed of an unladed European swallow is 25 mph\n",
+            "The air speed of an unladed European swallow is 24.6 mph\n"
+          ]
         }
       ]
     },
